--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,19 @@
     margin: 60px auto;
     width: 50%;
   }
-  
+
+  html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+  }
+body {
+  background-color: #bec4e5;
+  font-size: 16px;
+  line-height: 1.6;
+  font-family:'Noto Sans Mono', monospace;
+}
 /*$primary-color: #f42444;
 
 $primary-color-lighter: lighten($primary-color, 25%);
