--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,8 @@
    
     .container {
         display: grid;
-        grid-template-rows: 15% 65% 20%;
+        grid-template-rows: 20% 80%;
         grid-gap: 5px;
-        height: 100%;
         width: 100%;
       }
      
@@ -60,7 +59,6 @@
   }
   
     main div {
-    margin: 60px auto;
     width: 50%;
   }
 
