--- a/css/styles.css
+++ b/css/styles.css
@@ -13,55 +13,6 @@
        height: 35px;
       }
    
-    .container {
-        display: grid;
-        grid-template-rows: 20% 80%;
-        grid-gap: 5px;
-        width: 100%;
-      }
-     
-    header{
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        border: solid 2px #dfdfdf;
-      }
-
-    nav{
-        margin-top: 20px;
-        flex: 0.8
-      }
-
-    header ul {
-        float: right;
-      }
-      
-    header ul li {
-        display: inline;
-        padding: 10px;
-      
-      }
-      
-    a {
-    color: rgb(43, 143, 168);
-    text-decoration: none;
-  }
-    a:hover{
-    color: rgb(230, 20, 160);
-    transition: 0.3s ease-in;
-  }
-    a:active{
-  color:  #be2a2a;
-  }
-  
-    a:visited{
-  color: rgb(25, 16, 139);
-  }
-  
-    main div {
-    width: 50%;
-  }
-
   html,body{
     width: 100%;
     height: 100%;
@@ -74,6 +25,48 @@ body {
   line-height: 1.6;
   font-family:'Noto Sans Mono', monospace;
 }
+
+ul
+{
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+h1{
+  text-align: center;
+  padding-top: 1.5em;
+}
+
+
+.button-class {
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 200px;
+  grid-gap: 10px;
+  display: grid;
+  grid-template-columns: 200px 200px 200px;
+  grid-template-rows: 100px;
+  grid-gap: 20px;
+  transition: all 1s;
+
+  display: inline-block;
+  background-color: #409DBF;
+  border-radius: 10px;
+  border: 4px double #cccccc;
+  color: #eeeeee;
+  text-align: center;
+  font-family: inherit;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+   transition: all 0.5s;
+   cursor: pointer;
+   margin: 5px;
+ 
+}
+
 /*$primary-color: #f42444;
 
 $primary-color-lighter: lighten($primary-color, 25%);
